welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:2: error: type mismatch;
 found   : Unit
 required: Int
	if (((a+b) == 10) || ((b+c)==10) || ((a+c) == 10)) {
        ^